# oz_main_linkup_back

./: .dockerignore  .env.example  .gitignore  DOCKER_README.md  Dockerfile  README.md  TABLE_SPECIFICATIONS.md  create_dummy_data.py  create_dummy_data_fixed.py  docker-compose.yml  generate_migration.py  locustfile.py  pyproject.toml  test.sh
.github/ISSUE_TEMPLATE/: api_issue.md  bug_report.md  config.yml  database_issue.md  documentation.md  feature_request.md
.github/workflows/: checks.yml
app/: config.py  main.py
app/core/: database.py  exceptions.py  mixins.py  s3.py  schemas.py
app/features/artists/: models.py  router.py  schemas.py  service.py
app/features/companies/: dependencies.py  router.py  schemas.py  service.py
app/features/events/: crud.py  models.py  notifications.py  routers.py  schemas.py  services.py
app/features/images/: models.py  services.py
app/features/notifications/: models.py  services.py
app/features/posts/: models.py  router.py  schemas.py  service.py
app/features/schedule/: models.py  router.py  schemas.py  services.py
app/features/subscriptions/: models.py  router.py  schemas.py  service.py
app/features/superuser/: dependencies.py  router.py  schemas.py
app/features/uploads/: router.py
app/features/users/: auth.py  conftest.py  dependencies.py  email_service.py  models.py  oauth.py  router.py  schemas.py  service.py  test_auth.py  test_auth_utils.py  test_email_verification.py  test_models.py  test_social_auth.py
app/models/: __init__.py  base.py
app/shared/: utils.py
migrations/models/: 0_20250922065017_init.py  0_20250925061809_init.py  0_20250925142839_init.py  1_20250925151557_auto_migration.py  2_20250912232822_None.py  2_20250923110130_None.py  2_20250925152125_auto_migration.py  3_20250924064712_auto_migration.py  3_20250925153202_auto_migration.py  4_20250925132815_add_shared_image_indexes.py  4_20250926080246_auto_migration.py  5_20250925084905_auto_migration.py  5_20250926150518_auto_migration.py  6_20250930180838_update.py  7_20251001052346_add_original_email_field.py
scripts/: run.sh
tests/: conftest.py  test_posts.py  test_subscriptions.py
